fix: change cursor z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,7 +73,7 @@
     left: 50%;
     border-radius: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 100;
     pointer-events: none;
   }
 
